Fixed top-level (i.e. #nav_top) link wrap and mis-alignment bugs

--- a/public/stylesheets/sass/app.sass
+++ b/public/stylesheets/sass/app.sass
@@ -202,47 +202,32 @@ body#tinymce
   a
     color: #416962
   ul
-    float: left
     list-style: none
     height: 26px
-    margin: 4px 0 0 0
+    margin: 0
     padding: 0
-    width: 50%
+  ul.menu_h
+    left: 0
+    position: absolute
+    top: 5px
+  ul.menu_h_right
+    position: absolute
+    right: 0
+    top: 5px
   li
     border: none
     color: #555555
     display: inline
     font-size: 1em
     font-weight: bold
+    height: 16px
     margin: 0
     padding: 0 10px 0
     text-transform: uppercase
-    &#main-site
-      background: transparent url(/images/new/main-site.png) no-repeat
-      border-right: none
-      height: 42px
-      margin-top: -10px
-      padding: 0 5px 0 0
-      position: absolute
-      right: 0
-      text-indent: -999em
-      top: 0
-      width: 354px
-      a
-        display: block
-        height: 42px
-        width: 349px
   li + li
     border-left: solid 1px #416962
   li#home
     border: none
-  .menu_h_right
-    float: right
-    text-align: right
-    width: 50%
-    ul
-      float: right
-      width: 100%
 
 /* SHARE AND PRINT LINKS
 .page-utility
